# neuralnetwork

./: CMakeLists.txt  get-data
src/: AddBinaryOperation.hpp  ArrayView.hpp  BackPropagationNetwork.cpp  BackPropagationNetwork.hpp  BinaryNodeBuilder.cpp  BinaryNodeBuilder.hpp  BinaryOperationNode.hpp  BinaryOperationsFactory.hpp  BuilderStorage.cpp  BuilderStorage.hpp  BuilderToNodeMaps.hpp  CMakeLists.txt  ComputationNode.hpp  ConstNode.hpp  ConstStorage.hpp  ConstStorageBuilder.hpp  IConnectedLayerOperationsFactory.hpp  ILayerOperationsFactory.hpp  IMultipleInputLayerOperationsFactory.hpp  IPassThroughLayerOperationsFactory.hpp  LayeredNetworkBuilder.cpp  LayeredNetworkBuilder.hpp  LearnUtils.hpp  MathVectorAdapter.hpp  MnistPreprocessedDataSet.hpp  ModelData.hpp  MulBinaryOperation.hpp  MultipleInputOperationsFactory.hpp  NetworkBuilder.cpp  NetworkBuilder.hpp  NodeBuilder.hpp  NodeSpecs.hpp  NodeTags.hpp  NormalDistributionGenerator.hpp  NotNull.hpp  OperationNode.hpp  ScalarStorage.hpp  ScalarStorageBuilder.hpp  SigmoidUnaryOperation.hpp  StreamOperators.hpp  (+6 more)
src/BinaryOperationNodesFactories/: AddNodeFactory.hpp  IBinaryOperationNodesFactory.hpp  MulNodeFactory.hpp
src/BinaryOperations/: AddBinaryOperation.hpp  MulBinaryOperation.hpp
src/ConnectedLayerNodeFactories/: FullyConnectedLayer.hpp  IConnectedLayerNodeFactory.hpp  ReLULayer.hpp  SigmoidLayer.hpp  TanhLayer.hpp
src/Datasets/: MnistLoader.cpp  MnistLoader.hpp
src/LayerNodeFactories/: FullyConnectedLayer.hpp  PassThrough.hpp  ReLULayer.hpp  SigmoidLayer.hpp  TanhLayer.hpp
src/LayeredNetworkBuilders/: FullyConnectedLayerBuilder.cpp  FullyConnectedLayerBuilder.hpp  FullyConnectedLayerSpecs.hpp  InputLayerSpecs.hpp  LayerBuilder.hpp
src/MultipleInputLayerNodeFactories/: IMultipleInputLayerOperationsFactory.hpp  PassThrough.hpp
src/MultipleInputOperationNodesFactories/: AddNodeFactory.hpp  IMultipleInputOperationNodesFactory.hpp
src/MultipleInputOperators/: AddOperation.hpp  MultipleInputOperationNode.hpp
src/NodeBuilders/: BinaryNodeBuilder.cpp  BinaryNodeBuilder.hpp  ConnectedLayerNodeBuilder.cpp  ConnectedLayerNodeBuilder.hpp  ConstBufferNodeBuilder.hpp  ConstNodeBuilder.hpp  ConstSingleValueNodeBuilder.hpp  LayerNodeBuilder.cpp  LayerNodeBuilder.hpp  MultipleInputLayerNodeBuilder.cpp  MultipleInputLayerNodeBuilder.hpp  MultipleInputNodeBuilder.cpp  MultipleInputNodeBuilder.hpp  NodeBuilder.hpp  OperationNodeBuilder.hpp  PassThroughLayerNodeBuilder.cpp  PassThroughLayerNodeBuilder.hpp  UnaryNodeBuilder.cpp  UnaryNodeBuilder.hpp  VariableBufferNodeBuilder.hpp  VariableNodeBuilder.hpp  VariableSingleValueNodeBuilder.hpp
src/Nodes/: ComputationNode.hpp  ConstBufferNode.hpp  ConstNode.hpp  ConstSingleValueNode.hpp  SingleOutputOperationNode.hpp  VariableBufferNode.hpp  VariableNode.hpp  VariableSingleValueNode.hpp
src/Nodes/BinaryOperations/: AddBinaryOperation.hpp  BinaryOperationNode.hpp  MulBinaryOperation.hpp
src/Nodes/ConnectedLayerNodes/: FullyConnectedLayer.hpp  ReLULayer.hpp  SigmoidLayer.hpp  TanhLayer.hpp
src/Nodes/LayerNodes/: FullyConnectedLayer.hpp  LayerNode.hpp  PassThroughLayerNode.hpp  ReLULayer.hpp  SigmoidLayer.hpp  TanhLayer.hpp
src/Nodes/MultipleInputLayerNodes/: MultipleInputLayerNode.hpp  PassThroughMultipleInputLayerNode.hpp
src/Nodes/MultipleInputOperators/: AddOperation.hpp  MultipleInputOperationNode.hpp
src/Nodes/UnaryOperations/: PReLUUnaryOperation.hpp  ReLUUnaryOperation.hpp  SigmoidUnaryOperation.hpp  TanhUnaryOperation.hpp  UnaryOperationNode.hpp
src/PassThroughLayerNodeFactories/: IPassThroughLayerNodeFactory.hpp  ReLULayer.hpp  SigmoidLayer.hpp  TanhLayer.hpp
src/UnaryOperationNodesFactories/: IUnaryOperationNodesFactory.hpp  PReLUNodeFactory.hpp  ReLUNodeFactory.hpp  SigmoidNodeFactory.hpp  TanhNodeFactory.hpp
src/UnaryOperations/: ReLUUnaryOperation.hpp  SigmoidUnaryOperation.hpp  TanhUnaryOperation.hpp  UnaryOperationNode.hpp
src/Utils/: ArrayView.hpp  Math.cpp  Math.hpp  MathVectorAdapter.hpp
tst/: CMakeLists.txt  LayerNodeTests.cpp  MnistBenchmark.cpp  XorTest.cpp
tst/Nodes/LayerNodes/: PassThroughLayerNodeTest.cpp
tst/Nodes/MultipleInputLayerNodes/: PassThroughMultipleInputLayerNodeTest.cpp
tst/UnaryOperations/: SigmoidUnaryOperationTest.cpp
tst/Utils/: MathTests.cpp
